tests/files/flow_controller_tests/should_run/094.cmdr
x = cos(1.5);
print arccos(x);