tests/files/flow_controller_tests/should_fail/080.cmdr
x = "cat";
print arccos(x);